tests/failing/parser/types.out
tests/failing/parser/types.ri:3:22: error: cannot use references inside `extern` blocks
    |
  3 |     fn free(pointer: &void); // BAD
    |                      ^
    = help: use pointers instead: `*const void`
tests/failing/parser/types.ri:7:9: error: multi-level references are not allowed
    |
  7 |     f1: &&i32;
    |         ^
tests/failing/parser/types.ri:8:9: error: cannot use pointers with references
    |
  8 |     f2: *&i32;
    |         ^
tests/failing/parser/types.ri:11:9: error: pointers cannot be optional
     |
  11 |     f4: ?*u8;
     |         ^
     = note: by default pointers can contain the value `none`
tests/failing/parser/types.ri:13:9: error: tuples can have a maximum of 8 types
     |
  13 |     f5: (i32, i32, i32, i32, i32, i32, i32, i32, i32);
     |         ^
     = help: you can use a struct instead
tests/failing/parser/types.ri:15:9: error: optional multi-level types are not allowed
     |
  15 |     f6: ??i32;
     |         ^
tests/failing/parser/types.ri:17:9: error: invalid use of `void` type
     |
  17 |     f7: void;
     |         ^
tests/failing/parser/types.ri:19:9: error: expected type, found keyword `pkg`
     |
  19 |     f8: pkg;
     |         ^
tests/failing/parser/types.ri:20:9: error: expected type, found token `=`
     |
  20 |     f9: =;
     |         ^
rivetc: error: could not compile package `core`, aborting due to 9 previous errors